--- a/background.css
+++ b/background.css
@@ -1,13 +1,13 @@
-	body{
-	 background-color: #000000;
-   padding: 0px;
-   margin: 0px;
- }
 
-#gradient
+#canvas-basic
 {
-  width: 100%;
-  height: 800px;
-  padding: 0px;
-  margin: 0px;
+  position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
+
