--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700,900&display=swap');
+@import url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.3/NeoDunggeunmo.woff');
+
 
 
 * {
@@ -12,5 +14,7 @@ html{
 
 p{
   line-height: 150%;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: 'NeoDunggeunmo';
+  font-weight: normal; 
+  font-style: normal;
 }
