--- a/main.css
+++ b/main.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@200;800&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700,900&display=swap');
 
 
 * {
-font-family: 'Montserrat';
+font-family: 'Gothic A1', sans-serif;
+font-weight: 200;
 }
 
 html{
@@ -11,7 +13,11 @@ html{
   line-height: 150%;
 }
 
+h1{
+  font-weight: 800;
+}
+
 p{
   line-height: 150%;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: 'Gothic A1', sans-serif;
 }
