--- a/main.css
+++ b/main.css
@@ -13,6 +13,26 @@ html{
   line-height: 150%;
 }
 
+.head {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	text-align: center
+}
+.head .content {
+	display: inline-block;
+	vertical-align: middle
+}
+.head .blank {
+	display: inline-block;
+	width: 0;
+	height: 100%;
+	vertical-align: middle
+}
+
+
 h1{
   display: block;
   text-align: center;
