--- a/main.css
+++ b/main.css
@@ -24,7 +24,8 @@ html{
 	left: 0;
 	width: 100%;
 	height: 100%;
-	text-align: center
+  text-align: center
+  vertical-align: middle
 }
 .head .content {
 	display: inline-block;
