--- a/main.css
+++ b/main.css
@@ -44,7 +44,7 @@ html{
 
 p{
   display: block;
-  text-align: left;
+  text-align: center;
   margin-top: 20%;
   margin-bottom: 5%;
   line-height: 150%;
