--- a/main.css
+++ b/main.css
@@ -32,6 +32,7 @@ html{
   vertical-align: middle
 }
 
+
 .head .blank {
 	display: inline-block;
 	width: 0;
@@ -41,6 +42,7 @@ html{
 
 .list{
   text-align: left;
+  line-height: 150%;
 }
 
 p{
