--- a/main.css
+++ b/main.css
@@ -44,11 +44,26 @@ html{
   text-align: left;
 }
 
-p{
-  display: block;
-  text-align: center;
-  margin-top: 20%;
-  margin-bottom: 5%;
-  line-height: 150%;
-  font-family: 'Gothic A1', sans-serif;
+
+
+p {
+  position: absolute;
+  top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+  text-align: center
+}
+
+p .content {
+	display: inline-block;
+  vertical-align: middle
+}
+
+
+p .blank {
+	display: inline-block;
+	width: 0;
+	height: 100%;
+	vertical-align: middle
 }
